--- a/releases/dev/podinfo.yaml
+++ b/releases/dev/podinfo.yaml
@@ -10,11 +10,11 @@ metadata:
 spec:
   releaseName: podinfo-dev
   chart:
-    git: git@github.com:stefanprodan/gitops-helm
+    git: git@github.com:pramodbijani/gitops-helm
     path: charts/podinfo
     ref: master
   values:
-    image: stefanprodan/podinfo:dev-hdtwcel9
+    image: pramodbijani/podinfo:dev-2pdvcffx
     replicaCount: 1
     hpa:
       enabled: false
